# Code-Sandbox-MCP

./: .dockerignore  .gitignore  .trivyignore.yaml  MIGRATION.md  README.md  license  pylock.toml  pyproject.toml  requirements-dev.in
.gemini/: settings.json
.github/: dependabot.yml
.github/workflows/: security.yml
containers/: Dockerfile.nodejs  idle.mjs  sandbox-helper.mjs  sandbox-runner.mjs
examples/: codex_workflow.py
sbom/: README.md  sandbox-image.cdx.json
src/code_sandbox_mcp/: audit.py  config.py  docker_backend.py  errors.py  models.py  server.py  session.py
tests/: conftest.py  fakes.py  test_docker_backend.py  test_docker_integration.py  test_server.py  test_session.py  test_supply_chain.py  test_validation.py
